# OpCompiler

./: .gitignore  CMakeLists.txt  README.md  generated_model.cpp  run_model
examples/: simple_model.mdf  test_matmul_relu.mdf
include/: IR.hpp
src/: CodeGen.cpp  CudaCodeGen.cpp  Optimizer.cpp  Parser.cpp  main.cpp
